fixed unresponsive design