@@ -43,6 +43,7 @@ import java.time.ZoneId;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 
 public class EventPageCtrl implements Initializable {
@@ -83,7 +84,7 @@ public class EventPageCtrl implements Initializable {
     private RadioButton equalSplit;
     @FXML
     private RadioButton customSplit;
-//    @FXML
+    //    @FXML
 //    private Checkbox checkboxParticipant;
     @FXML
     private VBox vboxParticipantsTransaction;
@@ -183,6 +184,7 @@ public class EventPageCtrl implements Initializable {
             });
         });
     }
+
     public void load() throws WebApplicationException {
         System.out.println("loading EventPage");
 
@@ -194,19 +196,19 @@ public class EventPageCtrl implements Initializable {
         //load transactions
         transactions.getChildren().clear();
         transactions.getChildren().addAll(eventDTO.transactions.stream()
-            .map(ts -> new TransactionNode(ts, this)).toList());
+                .map(ts -> new TransactionNode(ts, this)).toList());
 
         //load participants
         participants.getPanes().clear();
         participants.getPanes().addAll(eventDTO.participants.stream()
-                        .map(p -> new ParticipantNode(p, this)).toList());
+                .map(p -> new ParticipantNode(p, this)).toList());
 
         //choice box author transaction
         authorInput.setItems(FXCollections.observableArrayList(eventDTO.participants));
 
         //checkboxes for participants
         vboxParticipantsTransaction.getChildren().setAll(eventDTO.participants.stream()
-            .map(EventPageCtrl::participantCheckbox).toList());
+                .map(EventPageCtrl::participantCheckbox).toList());
         //c1f05a35-1407-4ba1-ada3-0692649256b8
 
         //choiceboxes for transaction filter
@@ -263,13 +265,14 @@ public class EventPageCtrl implements Initializable {
     public void gotoHome() {
         mainCtrl.showStartPage();
     }
+
     public void gotoAdminLogin() {
         mainCtrl.showAdminPage();
     }
 
     public void copyInviteCode() {
 
-        if(UserData.getInstance().getCurrentUUID() == null) {
+        if (UserData.getInstance().getCurrentUUID() == null) {
             Alert alert = new Alert(Alert.AlertType.ERROR);
             alert.setTitle("Error");
             alert.setHeaderText(null);
@@ -313,7 +316,7 @@ public class EventPageCtrl implements Initializable {
         timeline.play();
     }
 
-    public void onCreateTransaction(ActionEvent event){
+    public void onCreateTransaction(ActionEvent event) {
         TransactionDTO ts = readTransactionFields();
 
         if (ts == null) return;
@@ -372,9 +375,9 @@ public class EventPageCtrl implements Initializable {
             String selectedPayer = (String) payerFilter.getValue();
             String selectedParticipant = (String) participantFilter.getValue();
             if ((selectedPayer.equals("All")
-                || selectedPayer.equals(author.getFullName()))
-                && (selectedParticipant.equals("All") ||
-                participants.stream().anyMatch(p -> p.getFullName().equals(selectedParticipant)))) {
+                    || selectedPayer.equals(author.getFullName()))
+                    && (selectedParticipant.equals("All") ||
+                    participants.stream().anyMatch(p -> p.getFullName().equals(selectedParticipant)))) {
                 transactions.getChildren().add(new TransactionNode(ts, this));
             }
         } catch (WebApplicationException e) {
@@ -424,13 +427,13 @@ public class EventPageCtrl implements Initializable {
             MainCtrl.alert("Please enter a description");
         } else if (author == null) {
             MainCtrl.alert("Please select a payer");
-        }  else if (amount == null) {
+        } else if (amount == null) {
             MainCtrl.alert("Please enter a valid amount");
         } else if (currency == null || currency.isEmpty()) {
             MainCtrl.alert("Please choose a currency code");
-        } else if (localDate ==null) {
+        } else if (localDate == null) {
             MainCtrl.alert("Date cannot be empty");
-        } else if (selectedRadioButton ==null){
+        } else if (selectedRadioButton == null) {
             MainCtrl.alert("Please chose how to split the transaction!");
         } else if (customSplit.isSelected()) {
             if (!participantIsSelected) {
@@ -455,24 +458,24 @@ public class EventPageCtrl implements Initializable {
     }
 
     private boolean checkInput(String name, String transactionAmountString, String currency,
-                            LocalDate localDate, ParticipantDTO author) {
-        if(name==null || name.isEmpty()){
+                               LocalDate localDate, ParticipantDTO author) {
+        if (name == null || name.isEmpty()) {
             MainCtrl.alert("Please enter the name of the expense");
             return true;
         }
-        if(author==null){
+        if (author == null) {
             MainCtrl.alert("Please chose the author of the transaction");
             return true;
         }
-        if(transactionAmountString==null || transactionAmountString.isEmpty()){
+        if (transactionAmountString == null || transactionAmountString.isEmpty()) {
             MainCtrl.alert("Please enter the amount of the expense");
             return true;
         }
-        if(currency==null){
+        if (currency == null) {
             MainCtrl.alert("Please enter the currency of the expense");
             return true;
         }
-        if(localDate==null){
+        if (localDate == null) {
             MainCtrl.alert("Please enter the date of the expense");
             return true;
         }
@@ -516,11 +519,11 @@ public class EventPageCtrl implements Initializable {
         ParticipantDTO participantDTO;
 
         try {
-            if(fName.isEmpty()){
+            if (fName.isEmpty()) {
                 MainCtrl.alert("Please enter the first name");
                 return;
             }
-            if(lName.isEmpty()){
+            if (lName.isEmpty()) {
                 MainCtrl.alert("Please enter the last name");
                 return;
             }
@@ -528,14 +531,14 @@ public class EventPageCtrl implements Initializable {
                 MainCtrl.alert("Please enter a valid email address");
                 return;
             }
-            if(bicText.isEmpty()){
-                bicText="-";
+            if (bicText.isEmpty()) {
+                bicText = "-";
             }
-            if(ibanText.isEmpty()){
-                ibanText="-";
+            if (ibanText.isEmpty()) {
+                ibanText = "-";
             }
             participantDTO = new ParticipantDTO(null, UserData.getInstance().getCurrentUUID(),
-                fName, lName, mail, ibanText, bicText);
+                    fName, lName, mail, ibanText, bicText);
             participantDTO = server.postParticipant(participantDTO);
 
             //updating event page
@@ -604,11 +607,12 @@ public class EventPageCtrl implements Initializable {
 
     }
 
-    public static void printParticipantsSplit(Set<ParticipantDTO> participants){
-        for(ParticipantDTO participant : participants){
+    public static void printParticipantsSplit(Set<ParticipantDTO> participants) {
+        for (ParticipantDTO participant : participants) {
             System.out.println(participant);
         }
     }
+
     private boolean isValidEmail(String email) {
         // Regex pattern to match email address
         String regexPattern = "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$";
@@ -665,6 +669,7 @@ public class EventPageCtrl implements Initializable {
     public void showOverviewTransactions() {
         expenseTabPane.getSelectionModel().select(overviewExpenses);
     }
+
     public void enableEditing(TransactionNode tsn) {
         transactionEditTarget = tsn;
         addExpenseTab.setText("Edit Expense");
@@ -678,18 +683,20 @@ public class EventPageCtrl implements Initializable {
         String selectedParticipant = (String) participantFilter.getValue();
         EventDTO event = server.getEvent(UserData.getInstance().getCurrentUUID());
 
+        var temp = transactions.getChildren();
 
         transactions.getChildren().setAll(
-                (TransactionNode) event.transactions
-                    .stream()
-                    .filter(ts -> selectedPayer.equals("All")
-                        || ts.author.getFullName().equals(selectedPayer))
-                    .filter(ts -> selectedParticipant.equals("All") ||
-                        ts.participants.stream()
-                            .anyMatch(p -> p.getFullName().equals(selectedParticipant)))
-                    .map(t -> new TransactionNode(t, this))
-                    .toList());
+                event.transactions
+                        .stream()
+                        .filter(ts -> selectedPayer.equals("All")
+                                || ts.author.getFullName().equals(selectedPayer))
+                        .filter(ts -> selectedParticipant.equals("All") ||
+                                ts.participants.stream()
+                                        .anyMatch(p -> p.getFullName().equals(selectedParticipant)))
+                        .map(t -> new TransactionNode(t, this))
+                        .collect(Collectors.toList()));
 
+        System.out.println(temp.equals(transactions.getChildren()));
 
     }
 
@@ -702,12 +709,13 @@ public class EventPageCtrl implements Initializable {
         this.authorInput.setValue(transaction.getAuthor());
         this.toggleGroup.selectToggle(customSplit);
 
-            //select checkboxes of participants
+        //select checkboxes of participants
         vboxParticipantsTransaction.getChildren().stream().filter(CheckBox.class::isInstance)
                 .map(CheckBox.class::cast)
                 .filter(cb -> transaction.getParticipants().contains(cb.getUserData()))
                 .forEach(cb -> cb.setSelected(true));
     }
+
     public void submitEditTransaction(ActionEvent event) {
         TransactionDTO ts = readTransactionFields();
         if (ts == null) return;
@@ -727,8 +735,8 @@ public class EventPageCtrl implements Initializable {
     }
 
 
-    public void updateParticipant(ParticipantNode oldNode, ParticipantDTO newParticipant){
-        if(newParticipant == null){
+    public void updateParticipant(ParticipantNode oldNode, ParticipantDTO newParticipant) {
+        if (newParticipant == null) {
             return;
         }
 
@@ -741,10 +749,10 @@ public class EventPageCtrl implements Initializable {
                 MainCtrl.alert("Please enter a valid email address");
                 return;
             }
-            if(newParticipant.getBic().isEmpty()){
+            if (newParticipant.getBic().isEmpty()) {
                 newParticipant.setBic("-");
             }
-            if(newParticipant.getIban().isEmpty()){
+            if (newParticipant.getIban().isEmpty()) {
                 newParticipant.setIban("-");
             }
 
